--- a/graylog2-web-interface/.babelrc
+++ b/graylog2-web-interface/.babelrc
@@ -17,6 +17,11 @@
           ]
         }
       }
+    },
+    "start-nohmr": {
+      "plugins": [
+        "react-auto-display-name"
+      ]
     }
   }
 }
